<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/computer_name_text_view"
            android:ems="10"
            android:id="@+id/computer_name" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/computer_mac_address"
            android:hint="@string/mac_address_text_view" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/computer_port"
            android:inputType="number"
            android:hint="@string/boot_port" />
    number
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            android:id="@+id/Create"
            android:layout_gravity="center_horizontal"
            android:onClick="saveComputer"/>
    </LinearLayout>

