<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/network_name"
        android:ems="10"
        android:id="@+id/network_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ip_range"
        android:hint="@string/ip_range" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/Create"
        android:layout_gravity="center_horizontal"
        android:onClick="saveNetwork" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/network_table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true">

        </TableLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>